# service/problem.go
@@ -2,6 +2,7 @@ package service
 
 import (
 	"encoding/json"
+	"errors"
 	"gin_oj/define"
 	"gin_oj/helper"
 	"gin_oj/models"
@@ -87,12 +88,12 @@ func GetProblemDetail(c *gin.Context) {
 // @Param authorization header string true "authorization"
 // @Param title formData string true "title"
 // @Param content formData string true "content"
-// @Param category_ids formData array false "category_ids"
-// @Param test_cases formData array true "test_cases"
+// @Param category_ids formData []string false "category_ids" collectionFormat(multi)
+// @Param test_cases formData []string true "test_cases" collectionFormat(multi)
 // @Param max_runtime formData int false "max_runtime"
 // @Param max_mem formData int false "max_mem"
 // @Success 200 {string} json "{"code":"200","data":""}"
-// @Router /problem-create [post]
+// @Router /admin/problem-create [post]
 func ProblemCreate(c *gin.Context) {
 	title := c.PostForm("title")
 	content := c.PostForm("content")
@@ -178,4 +179,120 @@ func ProblemCreate(c *gin.Context) {
 			"identity": data.Identity,
 		},
 	})
+}
+
+// ProblemUpdate
+// @Tags 管理员私有方法
+// @Summary 问题修改
+// @Param authorization header string true "authorization"
+// @Param identity formData string true "identity"
+// @Param title formData string true "title"
+// @Param content formData string true "content"
+// @Param max_runtime formData int true "max_runtime"
+// @Param max_mem formData int true "max_mem"
+// @Param category_ids formData []string false "category_ids" collectionFormat(multi)
+// @Param test_cases formData []string true "test_cases" collectionFormat(multi)
+// @Success 200 {string} json "{"code":"200","data":""}"
+// @Router /admin/problem-update [put]
+func ProblemUpdate(c *gin.Context) {
+	identity := c.PostForm("identity")
+	title := c.PostForm("title")
+	content := c.PostForm("content")
+	categoryIds := c.PostFormArray("category_ids")
+	testCases := c.PostFormArray("test_cases")
+	maxRuntime, _ := strconv.Atoi(c.PostForm("max_runtime"))
+	maxMem, _ := strconv.Atoi(c.PostForm("max_mem"))
+	if identity == "" || title == "" || content == "" || len(testCases) == 0 {
+		c.JSON(http.StatusOK, gin.H{
+			"code": "-1",
+			"msg":  "参数错误",
+		})
+		return
+	}
+	if err := models.DB.Transaction(func(tx *gorm.DB) error {
+		// 问题基础信息保存 problem_basic
+		problemBasic := models.ProblemBasic{
+			Identity:   identity,
+			Title:      title,
+			Content:    content,
+			MaxRuntime: maxRuntime,
+			MaxMem:     maxMem,
+		}
+		err := tx.Where("identity =?", identity).Updates(&problemBasic).Error
+		if err != nil {
+			return err
+		}
+
+		// 查询问题详情
+		err = tx.Where("identity =?", identity).Find(&problemBasic).Error
+		if err != nil {
+			return err
+		}
+
+		// 关联问题分类的更新
+		// 1、删除原来的
+		err = tx.Where("problem_id = ?", problemBasic.ID).
+			Delete(new(models.ProblemCategory)).Error
+		if err != nil {
+			return err
+		}
+		// 2. 新增新的
+		pcs := make([]*models.ProblemCategory, 0)
+		for _, id := range categoryIds {
+			intId, _ := strconv.Atoi(id)
+			pcs = append(pcs, &models.ProblemCategory{
+				ProblemId:  problemBasic.ID,
+				CategoryId: uint(intId),
+			})
+		}
+		err = tx.Create(&pcs).Error
+
+		if err != nil {
+			return err
+		}
+		// 关联测试案例的更新
+		// 1. 删除已存在的关联关系
+		err = tx.Where("problem_identity =?", identity).
+			Delete(new(models.TestCase)).Error
+		if err != nil {
+			return err
+		}
+		// 2. 增加新的关联关系
+		tcs := make([]*models.TestCase, 0)
+		for _, testCases := range testCases {
+			caseMap := make(map[string]string)
+			err := json.Unmarshal([]byte(testCases), &caseMap)
+			if err != nil {
+				return err
+			}
+			if _, ok := caseMap["input"]; !ok {
+				return errors.New("测试案例[input]格式错误")
+			}
+			if _, ok := caseMap["output"]; !ok {
+				return errors.New("测试案例[output]格式错误")
+			}
+			tcs = append(tcs, &models.TestCase{
+				Identity:        helper.GetUUID(),
+				ProblemIdentity: identity,
+				Input:           caseMap["input"],
+				Output:          caseMap["output"],
+			})
+		}
+		err = tx.Create(tcs).Error
+		if err != nil {
+			return err
+		}
+		return nil
+	}); err != nil {
+		c.JSON(http.StatusOK, gin.H{
+			"code": -1,
+			"msg":  "Problem Update Error:" + err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{
+		"code": "200",
+		"msg":  "问题更新成功",
+	})
+
 }
